fix: correct sensitive attachment layout to prevent overflow

--- a/app/scss/ila.scss
+++ b/app/scss/ila.scss
@@ -256,27 +256,11 @@ header.microblog {
 	padding-left: 50px;
 	max-width: 100%;
 	flex-wrap: wrap;
-	.attachment-item, .attachment-wrapper {
-		flex: 1 1 50%;
-		max-height: 360px;
-		padding: 5px;
-		a {
-			display: flex;
-			width: 100%;
-			height: 100%;
-			justify-content: center;
-			align-content: center;
-		}
-		img {
-			max-width: 100%;
-			object-fit: cover;
-		}
-	}
 	&.single {
 		.attachment-item, .attachment-wrapper {
 			max-height: fit-content;
 		}
-	}
+	}	
 	.icon {
 		display: block;
 		position: absolute;
@@ -287,6 +271,59 @@ header.microblog {
 	}
 	audio, video {
 		width: 100%;
+	}
+}
+
+.attachment-item, .attachment-wrapper {
+	flex: 1 1 50%;
+	max-height: 360px;
+	padding: 5px;
+	a {
+		display: flex;
+		width: 100%;
+		height: 100%;
+		justify-content: center;
+		align-content: center;
+	}
+	img {
+		max-width: 100%;
+		object-fit: cover;
+	}
+}
+
+.attachment-wrapper, .attachment-wrapper > div {
+	display: flex;
+	flex-direction: column;
+}
+
+.attachment-wrapper > div {
+	max-height: calc(100% - 1.5em);
+}
+
+.show-hide-sensitive-btn {
+	cursor: pointer;
+}
+
+.sensitive-attachment {
+	display: flex;
+	flex-direction: column;
+	max-height: 100%;
+	.sensitive-attachment-state {
+		display: none;
+	}
+	.sensitive-attachment-state:checked ~ .sensitive-attachment-box div {
+		display: none;
+	}
+	.sensitive-attachment-box {
+		position: relative;
+		max-height: 100%;
+		div {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			z-index: 10;
+			backdrop-filter: blur(2em);
+		}
 	}
 }
 
@@ -342,10 +379,6 @@ header.microblog {
 	margin-left: 0;
 }
 
-/*******************************************************************
-* Straight from main.scss
-*/
-
 .emoji, .custom-emoji {
 	max-width: 25px;
 }
@@ -380,30 +413,6 @@ header.microblog {
 	}
 	&[open] .show-more-btn::after {
 		content: ' Hide';
-	}
-}
-
-.show-hide-sensitive-btn {
-	cursor: pointer;
-}
-
-.sensitive-attachment {
-	display: inline-block;
-	.sensitive-attachment-state {
-		display: none;
-	}
-	.sensitive-attachment-state:checked ~ .sensitive-attachment-box div {
-		display:none;
-	}
-	.sensitive-attachment-box {
-		position: relative;
-		div {
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			z-index: 10;
-			backdrop-filter: blur(2em);
-		}
 	}
 }
 
